# fund_distributor

./: .env-example  Cargo.toml  README.md
src/: main.rs
